improve logging performance